--- a/client/chat.html
+++ b/client/chat.html
@@ -78,6 +78,7 @@
 
   <body>
     <section id="chat">
+      <h1>Room: <b id="roomID"></b></h1>
       <ul id="messages"></ul>
       <form action="" id="form">
         <input
